# SerialPortAss

./: .gitignore  AutoSendDialog.qml  CMakeLists.txt  IWriteStrategy.h  LogEntry.h  PortSelectionDialog.qml  README.md  ToggleTextButton.qml  dataprocessor.cpp  dataprocessor.h  filesender.cpp  filesender.h  fullduplexwritestrategy.cpp  fullduplexwritestrategy.h  halfduplexwritestrategy.cpp  halfduplexwritestrategy.h  loglistmodel.cpp  loglistmodel.h  logmanager.cpp  logmanager.h  main.cpp  portsettingsmanager.cpp  portsettingsmanager.h  resources.qrc  serialportmanager.cpp  serialportmanager.h  serialportviewmodel.cpp  serialportviewmodel.h
